# Trabalho-RNA

./: LICENSE  README.md  pyproject.toml
src/trabalho_rna/: __init__.py  constants.py  data.py  logs.py  main.py  model.py  scoring.py
